--- a/DOD_chatbot/chatindex.html
+++ b/DOD_chatbot/chatindex.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="bot.png" />
     <link rel="stylesheet" href="style.css" />
 </head>
+<h1 style="font-size: 2.5rem;">DOD_chat Support!</h1>
 
 <body>
     <div id="container" class="container">
@@ -13,7 +14,7 @@
             <div id="messages" class="messages"></div>
             <input id="input" type="text" placeholder="Say something..." autocomplete="off" autofocus="true" />
         </div>
-        <img src="bot.png" alt="Robot cartoon" height="500vh">
+        <img src="bot.png" alt="Robot cartoon" height="300vh">
     </div>
 </body>
 <script type="text/javascript" src="chatindex.js"></script>
